[package]
name = "dpsimrs"
version = "0.1.0"
edition = "2021"

[lib]
name = "dpsimrs"
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.1"
pyo3 = { version = "0.17.2", features = ["extension-module"] }
